# LabRaven

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
ext/: CMakeLists.txt
ext/ImGuizmo/: CMakeLists.txt  ImGuizmo.h
ext/OpenEXR/: OpenEXRCoreUnity.h  openexr-c.c
ext/sqlite3/: README.md
src/: CMakeLists.txt  DefaultImGuiIni.h  Info.plist  Lab.entitlements  imgui.ini
src/Activities/: CMakeLists.txt
src/Activities/Animation/: AnimationActivity.cpp  AnimationActivity.hpp  AnimationDialogModules.hpp  CMakeLists.txt
src/Activities/App/: AppActivity.cpp  AppActivity.hpp  CMakeLists.txt
src/Activities/Camera/: CMakeLists.txt  CameraActivity.cpp  CameraActivity.hpp  LabCameraImGui.cpp  LabCameraImGui.h  LabGizmo.cpp  LabGizmo.hpp  ReticleActivity.cpp  ReticleActivity.hpp  imgui-knobs.cpp  imgui-knobs.hpp
src/Activities/Color/: CMakeLists.txt  ColorActivity.cpp  ColorActivity.hpp  UIElements.cpp  UIElements.hpp
src/Activities/Console/: CMakeLists.txt  ConsoleActivity.cpp  ConsoleActivity.hpp
src/Activities/CoreNodeTest/: CMakeLists.txt  CoreDiagram.cpp  CoreDiagram.hpp  CoreNode.cpp  CoreNode.hpp  CoreNodePort.cpp  CoreNodePort.hpp  CoreNodeTestActivity.cpp  CoreNodeTestActivity.hpp  FileDialog.cpp  FileDialog.hpp  GainNode.cpp  GainNode.hpp  Notifier.cpp  TestNode.cpp  TestNode.hpp
src/Activities/Journal/: CMakeLists.txt  JournalActivity.cpp  JournalActivity.hpp
src/Activities/Joystick/: CMakeLists.txt  JoystickActivity.cpp  JoystickActivity.hpp
src/Activities/OpenUSD/: CMakeLists.txt  ComponentActivity.cpp  ComponentActivity.hpp  FileDialogModules.hpp  HydraActivity.cpp  HydraActivity.hpp  HydraEditor.cpp  HydraEditor.hpp  HydraOutlinerActivity.cpp  HydraOutlinerActivity.hpp  HydraPropertiesActivity.cpp  HydraPropertiesActivity.hpp  HydraRender.cpp  HydraRender.hpp  HydraViewport.cpp  HydraViewport.hpp  LayersActivity.cpp  LayersActivity.hpp  OpenUSDActivity.cpp  OpenUSDActivity.hpp  PrimPropertiesActivity.cpp  PrimPropertiesActivity.hpp  PropertiesActivity.cpp  PropertiesActivity.hpp  ScoutActivity.cpp  ScoutActivity.hpp  SessionActivity.cpp  SessionActivity.hpp  StatisticsActivity.cpp  StatisticsActivity.hpp  TfDebugActivity.cpp  TfDebugActivity.hpp  UsdCreateActivity.cpp  UsdCreateActivity.hpp  UsdFileDialogModules.hpp  UsdOutlinerActivity.cpp  UsdOutlinerActivity.hpp  UsdSessionLayer.cpp  UsdSessionLayer.hpp
src/Activities/Plugin/: CMakeLists.txt  PluginActivity.cpp  cr.h
src/Activities/Preferences/: CMakeLists.txt  PreferencesActivity.cpp  PreferencesActivity.hpp
src/Activities/Providers/: CMakeLists.txt  ProvidersActivity.cpp  ProvidersActivity.hpp
src/Activities/Sound/: AudioContextManager.cpp  AudioContextManager.hpp  CMakeLists.txt  PlaySoundFile.cpp  PlaySoundFile.hpp  SoundActivity.cpp  SoundActivity.hpp  attic.cpp
src/Activities/Sprite/: CMakeLists.txt  SpriteActivity.cpp  SpriteActivity.hpp
src/Activities/Test/: CMakeLists.txt  TestPlugin.cpp
src/Activities/Texture/: CMakeLists.txt  TextureActivity.cpp  TextureActivity.hpp  TextureActivity.metal  TextureActivity.mm
src/Activities/Tilengine/: CMakeLists.txt  TilengineActivity.cpp  TilengineActivity.hpp
src/Activities/Timeline/: CMakeLists.txt  TimelineActivity.cpp  TimelineActivity.hpp  UIElements.cpp  UIElements.hpp  Utilities.cpp  Utilities.hpp
src/Activities/UsdOutliner/: CMakeLists.txt  UsdOutlinerActivity.hpp
src/Lab/: App.cpp  App.h  AppTheme.cpp  AppTheme.h  CMakeLists.txt  CSP.cpp  CSP.hpp  ImguiExt.cpp  ImguiExt.hpp  LabDirectories.cpp  LabDirectories.h  LabDirectoriesObjC.mm  LabFileDialogManager.hpp  LabFileDialogManager.mm  LabJoystick.h  LabJoystick.mm  LabText.h  LabText_odr.cpp  Landru.cpp  Landru.hpp  Modes.cpp  Modes.hpp  RegisterAllActivities.h  RegisterAllModes.h  StudioCore.cpp  StudioCore.hpp  ThreePanelLayout.cpp  ThreePanelLayout.h  main_macos.mm  main_win32.cpp
src/Lab/ImGuiColorTextEdit/: LanguageDefinitions.cpp  TextEditor.cpp  TextEditor.h
src/Lab/LabAstro/: LabLocation.h  TimeUtil.cpp
src/Lab/libzmq/: CMakeLists.txt
src/Labs/: CMakeLists.txt
src/Labs/Color/: CMakeLists.txt  ColorActivity.cpp  ColorActivity.hpp  UIElements.cpp  UIElements.hpp  WavelengthToRGB.c  nanocolor.h
src/Labs/Console/: CMakeLists.txt  ConsoleActivity.cpp  ConsoleActivity.hpp
src/Labs/Journal/: JournalActivity.cpp  JournalActivity.hpp
src/Labs/Plugin/: CMakeLists.txt  PluginActivity.cpp  PluginActivity.hpp
src/Labs/Preferences/: PreferencesActivity.cpp
src/Labs/Test/: CMakeLists.txt  TestPlugin.cpp
src/Labs/Timeline/: CMakeLists.txt  OpenTimelineIOProvider.cpp  TimelineActivity.cpp  TimelineActivity.hpp  TimelineProvider.hpp  UIElements.cpp  UIElements.hpp
src/Providers/: CMakeLists.txt
src/Providers/Animation/: AnimationProvider.cpp  AnimationProvider.hpp  CMakeLists.txt  LabBVH.cpp  LabBVH.hpp
src/Providers/Assets/: AssetsProvider.cpp  AssetsProvider.hpp  CMakeLists.txt
src/Providers/Astro/: AstroProvider.cpp  AstroProvider.hpp  CMakeLists.txt  LabLocation.mm  TimeUtil.hpp
src/Providers/Camera/: CMakeLists.txt  CameraProvider.cpp  CameraProvider.hpp  LabCamera.cpp  LabCamera.h
src/Providers/Color/: CMakeLists.txt  ColorProvider.cpp  ColorProvider.hpp  WavelengthToRGB.h  glfwColor.h  glfwColor.mm  nanocolor.c  nanocolorUtils.c  nanocolorUtils.h
src/Providers/Metal/: CMakeLists.txt  MetalProvider.h  MetalProvider.mm
src/Providers/Midi/: CMakeLists.txt  MidiProvider.cpp  MidiProvider.hpp
src/Providers/OpenUSD/: CMakeLists.txt  CreateDemoText.cpp  CreateDemoText.hpp  OpenUSDProvider.cpp  OpenUSDProvider.hpp  ProfilePrototype.cpp  ProfilePrototype.hpp  SpaceFillCurve.hpp  UsdCreate.cpp  UsdCreate.hpp  UsdSessionLayer.cpp  UsdSessionLayer.hpp  UsdTemplater.cpp  UsdTemplater.hpp  UsdUtils.cpp  UsdUtils.hpp  par_shapes.h  usdtweakStub.cpp
src/Providers/Scheme/: CMakeLists.txt  SchemeProvider.cpp  SchemeProvider.hpp  ShaderTranspiler.cpp  ShaderTranspiler.hpp  disney-principled-brdf.scm  example-transpilation.scm  make-shader.scm  s7-README.md  s7-extensions.cpp  s7-extensions.h  s7.c  s7.h  shader-system.scm  (+3 more)
src/Studios/: CMakeLists.txt
(+86 files in other folders)
